# icr

./: .gitignore  README.md  pyro_example_tutorial.py  pyro_test_nonlinear.py  pytorch_discrete.py  recourse.py  requirements.txt  setup.cfg
scms/example1/: _dag.npy  _p_dict.json  _var_names.npy  costs.npy
scms/example1_extended/: _dag.npy  _p_dict.json  _var_names.npy  costs.npy
scms/example1_two_effects/: _dag.npy  _p_dict.json  _var_names.npy  costs.npy
scms/example1_two_unrelated/: _dag.npy  _p_dict.json  _var_names.npy  costs.npy
scms/example2/: _dag.npy  _p_dict.json  _var_names.npy  costs.npy
scms/example3/: _p_dict.json
scms/example4/: _dag.npy  _p_dict.json  _var_names.npy  costs.npy
scms/example5/: _dag.npy  _p_dict.json  _var_names.npy  costs.npy
scms/example5_v2/: _dag.npy  _p_dict.json  _var_names.npy  costs.npy
scripts/: compile-all-types.py  compile-folder.py  compile.py  compile_results.py  compile_robustness.py  eval_acceptance_rates.py  example1.py  example1_extended.py  example_scms.py  experiment-all-types-v2.py  experiment-all-types-v3.py  experiment-all-types.py  experiment-robustness.py  generate-scms.py  plots.py  prevspost.py  pyro_test.py  pyro_test2.py  random_binomial_all_types.py  recourse.py  robustness.py  run_experiments.py  sample_data.py  scm_test.py  test_generic_scm.py  test_pyro_mcmc.py  visualize_datasets.py
src/icr/causality/: __init__.py  dags.py  utils.py
src/icr/experiment/: run.py  (+2 more)
src/mar/: recourse.py  utils.py
src/mar_experiments.egg-info/: PKG-INFO  SOURCES.txt
src/mcr/: evaluation.py  recourse.py
(+47 files in other folders)
