[metadata]
name = mar-experiments
version = 0.0.1
author = Gunnar König
author_email = g.koenig.edu@pm.me
description = Python package for experiments for the Meaningful Algorithmic Recourse paper.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gcskoenig/mar
project_urls =
    Bug Tracker = https://github.com/gcskoenig/mar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
